Aggiornata la documentazione
